# GPUParallelSpatialAdaptiveKDE

./: README.md
data/: README.txt  ebird_80k.csv  maskSim1000000.asc  maskSim1210000.asc  maskSim1440000.asc  maskSim160000.asc  maskSim1960000.asc  maskSim640000.asc  maskSim810000.asc  pntsRedwood.csv  pntsSim100000.csv  pntsSim50000.csv  redwood.asc
kde_cuda/: AsciiRaster.h  CMakeLists.txt  CUDA_KDtree.cu  CUDA_KDtree.h  KDtree.cu  KDtree.h  README.txt  SamplePoints.h  Utilities.h  kde_cuda.cu  kde_cuda_kdtr.cu  kde_cuda_old.cu  kde_kernel.cu  kde_kernel_kdtr.cu  kde_kernel_old.cu
kde_openmp/: CMakeLists.txt  KDtree.cpp  KDtree.h  ParallelUtils.cmake  README.txt  SamplePoints.h  Utilities.h  kde_omp.cpp  kde_omp_kdtr.cpp  kde_omp_kdtr_sequential.cpp  kde_omp_old.cpp  kde_omp_old_sequential.cpp  kde_omp_sequential.cpp
